# swiftfetch

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  flake.nix  result
ascii/: arch.txt  cachyos.txt  debian.txt  fedora.txt  gentoo.txt  ubuntu.txt  void.txt
config/: ascii.txt  config.toml
src/: config.rs  display.rs  error.rs  lib.rs  main.rs  sys_info.rs
src/collectors/: desktop.rs  hardware.rs  mod.rs  packages.rs  sensors.rs  system.rs
src/data/: hardware.rs  mod.rs  system.rs
src/modules/: package.rs  system.rs
src/utils/: command.rs  file.rs  mod.rs  parsing.rs
