[package]
name = "swiftfetch"
version = "0.1.3"
edition = "2021"

[profile.release]
opt-level = 3
lto = true  # Link Time Optimization
debug = true
codegen-units = 1  # Reduce the number of codegen units for more optimization

[dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
dirs = "4.0"
shellexpand = "2.0"
termcolor = "1.1"
base64 = "0.13"
unicode-width = "0.1"